test/scc_test/stmt/semantic-errors/037.a
037.t:4:9: error: a break statement may only be used within a loop or switch